kubernetes/services.yml
apiVersion: v1
kind: Service
metadata:
  name: emarsys-due-date-calculator-service
  labels:
    app: emarsys-due-date-calculator-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: emarsys-due-date-calculator-service
